--- a/TheStore/src/main/resources/application.properties
+++ b/TheStore/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url= jdbc:mysql://localhost:3306/thestore
+spring.datasource.username=root
+spring.datasource.password=@dmin1
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.session.jdbc.initialize-schema=always
